--- a/vagrantfile
+++ b/vagrantfile
@@ -31,7 +31,15 @@ Vagrant.configure("2") do |config|
 	mkdir -p ~root/.ssh
         cp ~vagrant/.ssh/auth* ~root/.ssh
 
- 	SHELL
+yum install -y setools-console	
+yum install -y policycoreutils-python
+yum install -y policycoreutils-newrole
+yum install -y selinux-policy-mls
+yum install -y setroubleshoot
+yum install -y epel-release
+yum install -y nginx
+ 	
+	SHELL
 
       end
   end
